--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -10,6 +10,6 @@
     <script src="js/funciones.js"></script>-->
     <!-- <script src="js/strings.js"></script> -->
     <!-- <script src="js/arrays.js"></script> -->
-    <script src="js/expresionesR/expresionesRegulares.js"></script>
+    <script src="js/objetos/objetos.js"></script>
   </body>
 </html>
