--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Variables</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Variables</title>
-</head>
-
-<body>
-  <!-- <script src="js/condicionales.js"></script>
+  <body>
+    <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
-  <!-- <script src="js/strings.js"></script> -->
-  <!-- <script src="js/arrays.js"></script> -->
-  <script src="js/objetos/objetos.js"></script>
-</body>
-
+    <!-- <script src="js/strings.js"></script> -->
+    <!-- <script src="js/arrays.js"></script> -->
+    <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script>
+  </body>
 </html>
