--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -10,9 +10,10 @@
 <body>
   <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
-  <!-- <script src="js/strings.js"></script> -->
+  <!-- <script src="js/strings/strings.js"></script> -->
   <!-- <script src="js/arrays.js"></script> -->
-  <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script>
+  <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
+  <script src="js/objetos/objetos.js"></script>
 </body>
 
 </html>
