--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-</head>
-
-<body>
-  <!-- <script src="js/condicionales.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+  </head>
+  <body>
+    <header id="header" class="header">
+      <h1 id="main-title" class="title">Soy un título</h1>
+      <h2 id="main-subtitle" class="subtitle">Soy un subtítulo</h2>
+      <h3 id="start-point" class="start">
+    </header>
+    <p id="paragraph">Soy un párrafo</p>
+    <span id="span">Soy un span</span>
+    <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
-  <!-- <script src="js/strings/strings.js"></script> -->
-  <!-- <script src="js/arrays.js"></script> -->
-  <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
-  <script src="js/objetos/objetos.js"></script>
-</body>
-
+    <!-- <script src="js/strings/strings.js"></script> -->
+    <!-- <script src="js/arrays.js"></script> -->
+    <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
+    <!-- <script src="js/objetos/objetos.js"></script> -->
+    <script src="js/DOM/dom.js"></script>
+  </body>
 </html>
