--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -6,13 +6,42 @@
     <title></title>
   </head>
   <body>
+    <!-- EJERCICIO 1 -->
+
     <header id="header" class="header">
       <h1 id="main-title" class="title">Soy un título</h1>
       <h2 id="main-subtitle" class="subtitle">Soy un subtítulo</h2>
       <h3 id="start-point" class="start">
     </header>
+
+    <!-- EJERCICIO 2 -->
+
     <p id="paragraph">Soy un párrafo</p>
     <span id="span">Soy un span</span>
+
+    <!-- EJERCICIO 3 -->
+
+    <section id="section">
+      <h2>Sección principal</h2>
+      <article>
+        <h3>Artículo 1</h3>
+        <p>Contenido del artículo 1.</p>
+        <ul>
+          <li><span>Elemento 1</span></li>
+          <li><span>Elemento 2</span></li>
+          <li><span>Elemento 3</span></li>
+        </ul>
+      </article>
+      <article>
+        <h3>Artículo 2</h3>
+        <p>Contenido del artículo 2.</p>
+        <ul>
+          <li><span>Elemento 4</span></li>
+          <li><span>Elemento 5</span></li>
+          <li><span>Elemento 6</span></li>
+        </ul>
+      </article>
+    </section>
     <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
     <!-- <script src="js/strings/strings.js"></script> -->
