--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -6,14 +6,16 @@
     <title></title>
   </head>
   <body>
-    <!-- EJERCICIO 1 -->
+    
 
+    <!-- EJERCICIO 1 -->
+    <button id="button">Click Me</button>
     <header id="header" class="header">
       <h1 id="main-title" class="title">Soy un título</h1>
       <h2 id="main-subtitle" class="subtitle">Soy un subtítulo</h2>
       <h3 id="start-point" class="start">
     </header>
-
+    <p id="keyboard">"esperando entrada de teclado"</p>
     <!-- EJERCICIO 2 -->
 
     <p id="paragraph">Soy un párrafo</p>
@@ -48,6 +50,7 @@
     <!-- <script src="js/arrays.js"></script> -->
     <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
     <!-- <script src="js/objetos/objetos.js"></script> -->
-    <script src="js/DOM/dom.js"></script>
+    <!-- <script src="js/DOM/dom.js"></script> -->
+    <script src="js/eventos/eventos.js"></script>
   </body>
 </html>
