new update exercices

--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -11,22 +11,24 @@
 
 
   <!-- EJERCICIO 1 -->
-  <button id="button">Click Me</button>
+  <!-- <button id="button">Click Me</button>
   <header id="header" class="header">
     <h1 id="main-title" class="title">Soy un título</h1>
     <h2 id="main-subtitle" class="subtitle">Soy un subtítulo</h2>
     <h3 id="start-point" class="start">
-  </header>
+  </header> -->
 
-  <p id="keyboard">"esperando entrada de teclado"</p>
+  <!-- <p id="keyboard">"esperando entrada de teclado"</p> -->
   <!-- EJERCICIO 2 -->
+  <!-- <label for="range" id="label-range"></label>
   <input id="range" type="range" min="0" max="10" />
+
   <p id="paragraph">Soy un párrafo</p>
-  <span id="span">Soy un span</span>
+  <span id="span">Soy un span</span> -->
 
   <!-- EJERCICIO 3 -->
 
-  <section id="section">
+  <!-- <section id="section">
     <h2>Sección principal</h2>
     <article>
       <h3>Artículo 1</h3>
@@ -46,7 +48,41 @@
         <li><span>Elemento 6</span></li>
       </ul>
     </article>
-  </section>
+  </section> -->
+  <!-- EJERCICIO 4 -->
+  <!-- <p>Seleccione una opción:</p>
+  <select name="laptops" id="laptops">
+    <option value="default"> Select </option>
+    <option value="option1">Macbook Air</option>
+    <option value="option2">Marcbook Pro M2 Pro</option>
+    <option value="option3">Mabook Pro M2 Pro Max</option>
+  </select> -->
+  <!-- EJERCICIO 5 -->
+  <!-- <p>Selecciona una fecha:</p>
+  <input type="date" id="date"> -->
+  <!-- EJERCICIO 6 -->
+  <!-- <form id="form">
+    <div>
+      <label for="price">Price</label>
+      <input type="price" name="" id="price">
+    </div>
+    <div>
+      <label for="discount">Discount</label>
+      <input type="discount" name="" id="discount">
+    </div>
+    <button id="button">Calcular</button>
+    <p></p>
+  </form> -->
+  <!-- EJERCICIO 7 -->
+  <div>
+    <label for="mainText">Main Text</label>
+    <input type="mainText">
+  </div>
+  <div>
+    <label for="copyText">Copy Text</label>
+    <input type="copyText">
+  </div>
+
   <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
   <!-- <script src="js/strings/strings.js"></script> -->
@@ -54,6 +90,7 @@
   <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
   <!-- <script src="js/objetos/objetos.js"></script> -->
   <!-- <script src="js/DOM/dom.js"></script> -->
+
   <script src="js/eventos/eventos.js"></script>
 </body>
 
