--- a/CURSO JS/index.html
+++ b/CURSO JS/index.html
@@ -38,6 +38,7 @@
     </article>
     <article>
       <h3>Artículo 2</h3>
+      
       <p>Contenido del artículo 2.</p>
       <ul>
         <li><span>Elemento 4</span></li>
@@ -47,6 +48,7 @@
     </article>
   </section> -->
     <!-- EJERCICIO 4 -->
+
     <!-- <p>Seleccione una opción:</p>
   <select name="laptops" id="laptops">
     <option value="default"> Select </option>
@@ -55,9 +57,11 @@
     <option value="option3">Mabook Pro M2 Pro Max</option>
   </select> -->
     <!-- EJERCICIO 5 -->
+
     <!-- <p>Selecciona una fecha:</p>
   <input type="date" id="date"> -->
     <!-- EJERCICIO 6 -->
+
     <!-- <form id="form">
     <div>
       <label for="price">Price</label>
@@ -70,6 +74,7 @@
     <button id="button">Calcular</button>
     <p></p>
   </form> -->
+
     <!-- EJERCICIO 7 -->
     <!-- <div>
       <label for="mainText">Main Text</label>
@@ -81,9 +86,12 @@
     </div> -->
 
     <!-- EJERCICIO 8 -->
-    <h2 id="text"></h2>
+    <!-- <h2 id="text"></h2>
     <button id="preButton">Previous</button>
-    <button id="nextButton">Next</button>
+    <button id="nextButton">Next</button> -->
+
+    <!-- EJERCICIO 9 -->
+
     <!-- <script src="js/condicionales.js"></script>
     <script src="js/funciones.js"></script>-->
     <!-- <script src="js/strings/strings.js"></script> -->
@@ -91,6 +99,23 @@
     <!-- <script src="js/arraysII-buclesIntegrados/buclesIntegrados.js"></script> -->
     <!-- <script src="js/objetos/objetos.js"></script> -->
     <!-- <script src="js/DOM/dom.js"></script> -->
+    <form id="form">
+      <div>
+        <label for="username">username</label>
+        <input type="text" id="username" required />
+      </div>
+      <div>
+        <label for="password">password</label>
+        <input type="password" id="password" required />
+      </div>
+      <div>
+        <label for="condicones">Acepto los términos y condiciones</label>
+        <input type="checkbox" name="condiciones" id="condiciones" required />
+      </div>
+      <div>
+        <input type="submit" value="Send" id="submit" disabled />
+      </div>
+    </form>
     <script src="js/eventos/eventos.js"></script>
   </body>
 </html>
